@@ -1,3 +1,9 @@
+2002-10-01  Peter Osterlund  <petero2@telia.com>
+
+	* (p4-font-lock-buffer): Made fontification more robust. Some
+	  versions of emacs failed if you tricked them to fontify a binary
+	  file.
+
 2002-09-29  Peter Osterlund  <petero2@telia.com>
 
 	* (p4-find-change-numbers): Handle the case "submit @1234" when
